--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,9 +1,9 @@
 set(CMAKE_BUILD_TYPE Release)
 
-add_executable(app
+add_executable(dci
     main.cpp
 )
 
-target_link_libraries(app PRIVATE
+target_link_libraries(dci PRIVATE
     lexical_analyzer
 )
