--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+enable_testing()
+
 add_subdirectory(src/app)
 add_subdirectory(src/lexical_analyzer)
+add_subdirectory(tests)
+
