--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -2,8 +2,7 @@ set(CMAKE_BUILD_TYPE Release)
 
 add_executable(dci
     main.cpp
+    logger.cpp
 )
 
-target_link_libraries(dci PRIVATE
-    lexical_analyzer
-)
+target_link_libraries(dci PRIVATE lexical_analyzer common)
