--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -2,7 +2,8 @@ set(CMAKE_BUILD_TYPE Release)
 
 add_executable(dci
     main.cpp
+    parser.cpp
     logger.cpp
 )
 
-target_link_libraries(dci PRIVATE lexical_analyzer common)
+target_link_libraries(dci PRIVATE lexical_analyzer syntax_analyzer common)
