manejo de errores

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(dci
     main.cpp
     parser.cpp
     logger.cpp
+    print_error.cpp
 )
 
 target_link_libraries(dci PRIVATE lexical_analyzer syntax_analyzer common)
