--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-#set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Release)
 
 add_executable(dci
     main.cpp
@@ -6,5 +6,10 @@ add_executable(dci
     logger.cpp
     print_error.cpp
 )
+
+# (In src/app/CMakeLists.txt, after add_executable)
+if(CMAKE_CROSSCOMPILING)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --static")
+endif()
 
 target_link_libraries(dci PRIVATE lexical_analyzer syntax_analyzer common)
