--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,6 @@ enable_testing()
 add_subdirectory(src/app)
 add_subdirectory(src/common)
 add_subdirectory(src/lexical_analyzer)
+add_subdirectory(src/semantic_analyzer)
 add_subdirectory(src/syntax_analyzer)
 add_subdirectory(tests)
-
