--- a/src/semantic_analyzer/CMakeLists.txt
+++ b/src/semantic_analyzer/CMakeLists.txt
@@ -1,4 +1,4 @@
-#set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Release)
 
 add_library(semantic_analyzer INTERFACE)
 target_include_directories(semantic_analyzer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
