mepa engine support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,6 @@ add_subdirectory(src/app)
 add_subdirectory(src/common)
 add_subdirectory(src/lexical_analyzer)
 add_subdirectory(src/semantic_analyzer)
+add_subdirectory(src/mepa_generator)
 add_subdirectory(src/syntax_analyzer)
 add_subdirectory(tests)
