mepa que muero hoy

--- a/src/mepa_generator/CMakeLists.txt
+++ b/src/mepa_generator/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Release)
 
 add_library(mepa_generator INTERFACE)
 target_include_directories(mepa_generator INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
