true/false como 1 y 0 en mepa

--- a/src/semantic_analyzer/CMakeLists.txt
+++ b/src/semantic_analyzer/CMakeLists.txt
@@ -5,5 +5,5 @@ target_include_directories(semantic_analyzer INTERFACE ${CMAKE_CURRENT_SOURCE_DI
 
 target_link_libraries(  semantic_analyzer
                         INTERFACE lexical_analyzer
-
+                        INTERFACE  mepa_generator
                         )
