--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -11,4 +11,4 @@ if(CMAKE_CROSSCOMPILING)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --static")
 endif()
 
-target_link_libraries(dci PRIVATE lexical_analyzer syntax_analyzer semantic_analyzer common)
+target_link_libraries(dci PRIVATE lexical_analyzer syntax_analyzer mepa_generator semantic_analyzer common)
